# Rust-Ransomware

./: Cargo.toml  README.md
src/: gen_keys.rs  main.rs
